# sdl_helper

./: .gitignore  CMakeLists.txt  README.md  makefile
assets/samurai/: licence.txt
examples/: CMakeLists.txt  LICENSE  example_sdl.cpp  example_widgets.cpp
src/: CMakeLists.txt
src/game/: CMakeLists.txt  fonts_db.cpp  fonts_db.h  scene.cpp  scene.h  sprites_db.cpp  sprites_db.h
src/sdl/: CMakeLists.txt  sdl.cpp  sdl.h  sdl_font.cpp  sdl_font.h  sdl_renderer.cpp  sdl_renderer.h  sdl_surface.cpp  sdl_surface.h  sdl_texture.cpp  sdl_texture.h  sdl_window.cpp  sdl_window.h
src/widgets/: CMakeLists.txt  animation.cpp  animation.h  image.cpp  image.h  label.cpp  label.h  sprite.cpp  sprite.h  transform.cpp  transform.h  widget.cpp  widget.h
